# operatoros

./: .env.example  .gitignore  AGENTS.md  ATTENDANCE_IMPORT_CURRENT_FLOW_AUDIT.md  ATTENDANCE_IMPORT_PREVIEW_DESIGN.md  ATTENDANCE_IMPORT_PREVIEW_IMPLEMENTATION_REPORT.md  AUDIT_REPORT.md  BACKEND_SIDECAR_READINESS_REPORT.md  COMMANDS.md  CONVENTIONS.md  DESKTOP_DATA_LIFECYCLE_REPORT.md  ERRORS.md  FRONTEND_READINESS_REPORT.md  MEMORY.md  Makefile  PHASE_11_1A_REVIEW.md  PHASE_11_1B_IMPLEMENTATION_REPORT.md  PHASE_11_1C_IMPLEMENTATION_REPORT.md  PHASE_11_1D_ACCEPTANCE_REPORT.md  PHASE_11_1D_CLOSURE_REPORT.md  PHASE_11_1D_FULL_API_ROUTE_AUDIT_REPORT.md  PHASE_11_1D_WSL_XLSX_IMPORT_FIX_REPORT.md  PHASE_11_1_IMPLEMENTATION_PLAN.md  PHASE_STUDENT_DATABASE_IMPLEMENTATION_PLAN.md  PROJECT_CONTEXT.md  PROJECT_STRUCTURE_REPORT.md  PYINSTALLER_AUDIT_REPORT.md  README.md  S2_LIVE_DATA_INTEGRITY_REPORT.md  S2_STUDENT_MASTER_FOUNDATION_REPORT.md  S3_11B_COMMIT_REPORT.md  S3_11B_FINAL_DEVELOPER_RUNTIME_STATUS.md  S3_11B_PROCESS_CLEANUP_REPORT.md  S3_11B_SOURCE_DIFF_REVIEW.md  S3_11B_WINDOWS_BUN_TAURI_ACCEPTANCE.md  S3_11B_WINDOWS_CLONE_REPORT.md  S3_11B_WINDOWS_NODE_TAURI_ACCEPTANCE.md  S3_11B_WORKTREE_RECONCILIATION_REPORT.md  S3_5_ENROLLMENT_PREVIEW_REPORT.md  S3_5_LEGACY_ACADEMIC_MAPPING_AUDIT.md  (+41 more)
backend/: .dockerignore  (+6 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src-tauri/src/sidecar/: health.rs  instance_lock.rs  job_object.rs  lifecycle.rs  manager.rs  mod.rs  process.rs
(+549 files in other folders)
