[package]
name = "operatoros-desktop"
version = "0.1.0"
description = "OperatorOS Tauri desktop shell and FastAPI sidecar supervisor"
edition = "2021"

[lib]
name = "operatoros_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[target.'cfg(windows)'.dependencies]
tauri-plugin-single-instance = "2"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }
